[gd_scene load_steps=7 format=2]

[ext_resource path="res://Projectile/fire/Flamethrower/white_square_thinner.png" type="Texture" id=1]
[ext_resource path="res://Projectile/fire/Flamethrower/flame_particles.gd" type="Script" id=2]
[ext_resource path="res://Projectile/fire/Flamethrower/light_32x32.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="CircleShape2D" id=2]
radius = 17.1172

[node name="flame_particles" type="RigidBody2D"]
collision_layer = 4
collision_mask = 0
mass = 0.00102041
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0.356863, 0, 1 )
material = SubResource( 3 )
scale = Vector2( 0.07, 0.07 )
texture = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="Sprite"]
scale = Vector2( 25.4464, 23.6607 )
texture = ExtResource( 3 )
color = Color( 1, 0.223529, 0, 1 )
energy = 2.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 513
collision_mask = 513

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
